invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_25.src
.IPPcode24
IDIV LF@a int@49